feat: 이전 채팅 로그 불러오기 (#81)
* feat: 이전 메시지 불러오는 기능 추가

* fix: redis와 elasticsearch에서 가져온 메시지 통일성 작업

* feat: 불러오는 채팅 중 가장 이전 채팅과 같은 날짜인 채팅들도 같이 불러오도록 수정